<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/day_view_48px"
            android:title="@string/nav_item_schedule"/>
        <item
            android:id="@+id/nav_my_list"
            android:icon="@drawable/star_48px"
            android:title="@string/nav_item_my_list"/>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/news_48px"
            android:title="@string/nav_item_news_feed"/>
        <item
            android:id="@+id/nav_general_info"
            android:icon="@drawable/about_48px"
            android:title="@string/nav_item_general_info"/>
        <item
            android:id="@+id/nav_exhibitor_list"
            android:icon="@drawable/conference_48px"
            android:title="@string/nav_item_exhibitor_list"/>
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/gift_48px"
            android:title="@string/nav_item_news"/>
        <item
            android:id="@+id/nav_speakers"
            android:icon="@drawable/about_us_male_48px"
            android:title="@string/nav_item_speakers"/>
        <item
            android:id="@+id/nav_floor_plan"
            android:icon="@drawable/treasure_map_48px"
            android:title="@string/nav_item_floor_plan"/>
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share"/>-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send"/>-->
        <!--</menu>-->
    <!--</item>-->

</menu>
