<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.expocontacts.expomobile.RegisterActivity">

    <TextView
        android:text="@string/register_instr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:id="@+id/tvRegisterInstr"/>

    <EditText
        style="@style/registrationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/your_name"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tvRegisterInstr"
        android:id="@+id/txtName"/>

    <EditText
        style="@style/registrationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email_address"
        android:layout_alignParentStart="true"
        android:layout_below="@id/txtName"
        android:id="@+id/txtEmailAddress"/>

    <EditText
        style="@style/registrationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/choose_password"
        android:layout_alignParentStart="true"
        android:layout_below="@id/txtEmailAddress"
        android:id="@+id/txtPassword"/>

    <EditText
        style="@style/registrationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/retype_password"
        android:layout_alignParentStart="true"
        android:layout_below="@id/txtPassword"
        android:id="@+id/txtConfirmPassword"/>

    <Button
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/txtConfirmPassword"
        android:layout_marginTop="20dp"
        android:id="@+id/btnRegister"/>

</RelativeLayout>
